# minimal_example_leptos

./: README.md
leptos04/: Cargo.toml  index.html
leptos04/src/: main.rs
leptos05/: Cargo.toml
leptos05/src/: main.rs
