[package]
name = "leptos05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.5.0-rc2", features = ["csr"] }
log = "0.4.20"
wasm-logger = "0.2.0"
